<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shapeputih"
        android:orientation="horizontal"
        android:padding="@dimen/dimen8dp">

        <ImageView
            android:layout_width="@dimen/dimen80dp"
            android:layout_height="@dimen/dimen80dp"
            android:src="@drawable/fastprint"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen8dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/id_order_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultfotocpy"
                android:visibility="gone" />



            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/hari_rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hari" />

            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/harga_rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga" />

            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/status_rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>