<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="@dimen/dimen10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shapeputih"
        android:orientation="horizontal"
        android:padding="@dimen/dimen8dp">

        <ImageView
            android:layout_width="@dimen/dimen50dp"
            android:layout_height="@dimen/dimen50dp"
            android:src="@drawable/fastprint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen8dp"
            android:orientation="vertical">
            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/id_rp_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/defaultfotocpy" />

            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/nama_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultfotocpy" />

            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/alamat_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultaddress" />

            <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                android:id="@+id/jarak_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultjarak" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>