<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_login"
    tools:context="com.hikmah.dewi.fastprint.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dot_light_screen1"
        android:orientation="vertical"
        android:padding="@dimen/dimen10dp"
        tools:context=".view.LoginActivity">

        <ImageView
            android:layout_width="@dimen/gambar150dp"
            android:layout_height="@dimen/gambar150dp"
            android:layout_gravity="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/logoku" />

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dimen10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1.5"
                        android:background="@color/atas1"
                        android:src="@drawable/smartphone" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8.5"
                        android:hint="@string/nomor"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1.5"
                        android:background="@color/atas1"
                        android:src="@drawable/key" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8.5"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimenn20dp"
                    android:background="@color/atas1"
                    android:text="@string/login"
                    android:id="@+id/btn_login"
                    android:textColor="@color/white" />

                <com.hikmah.dewi.fastprint.util.FontLatoSemiBold
                    android:id="@+id/tanya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimenn20dp"
                    android:gravity="center"
                    android:text="@string/tanya"
                    android:textColor="@color/black" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
