<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hikmah.dewi.fastprint.fragment.ProfileFragment">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinator_edit">

    <LinearLayout
        android:id="@android:id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen6dp"
            android:layout_marginLeft="@dimen/dimen6dp"
            android:layout_marginRight="@dimen/dimen6dp"
            app:cardBackgroundColor="#FFF"
            app:cardCornerRadius="0dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gra_white"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dimen16dp"
                    android:paddingLeft="@dimen/dimen22dp"
                    android:paddingRight="@dimen/dimen32"
                    android:paddingTop="@dimen/dimen16dp"
                    android:weightSum="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.pixplicity.fontview.FontAppCompatTextView
                            android:id="@+id/fontAppCompatTextView"
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.00"
                            android:paddingLeft="@dimen/dimen16dp"
                            android:paddingRight="@dimen/dimen16dp"
                            android:text="@string/profile"
                            android:textColor="#000"
                            android:textSize="@dimen/dimen16dp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/edit_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimen48dp"
                            android:layout_marginLeft="@dimen/dimen16dp"
                            android:drawableLeft="@drawable/edit"
                            android:text="@string/edit" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp">

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="#000"
                            android:textSize="14dp" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            android:id="@+id/nameku"
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/defaultname"
                            android:textColor="#706f6f"
                            android:textSize="11dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/smartphone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp">

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textColor="#000"
                            android:textSize="14dp" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/defaultphone"
                            android:textColor="#706f6f"
                            android:id="@+id/phoneku"
                            android:textSize="11dp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/email" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp">

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="#000"
                            android:textSize="14dp" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:id="@+id/emailku"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/defaultemail"
                            android:textColor="#706f6f"
                            android:textSize="11dp" />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/developersView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/house" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp">

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="#000"
                            android:textSize="14dp" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:id="@+id/addressku"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/defaultaddress"
                            android:textColor="#706f6f"
                            android:textSize="11dp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
